--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/styles.css">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Mi CSS -->
+  <link rel="stylesheet" href="./css/main.css">
 
 
-    <title>Ariadne Crochet BS</title>
-  </head>
-  <body>
-    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <title>Ariadne Crochet BS</title>
+</head>
+
+<body style="overflow-x: hidden;">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
       <div class="container-fluid">
-        <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -32,104 +37,112 @@
               <a class="nav-link active" href="./sections/tutoriales.html">Crea</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="./sections/tienda.html">Regala</a>
+              <a class="nav-link active" href="./sections/tienda.html">Regala</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="./sections/contacto-encargos.html">Personaliza</a>
+              <a class="nav-link active" href="./sections/contacto-encargos.html">Personaliza</a>
             </li>
           </ul>
         </div>
       </div>
-    </header>
-    <main class="container-fluid">
-      <section class="row p-5 align-items-center hero">
-        <div data-aos="fade-right" data-aos-duration="2000" class="col-md-9 col-lg-6 col-xs-8 p-4" >
-          <h1 class="main__h1">Ariadne <br> Crochet</h1>
-          <br>
-          <h2 class="main__h2">Crochet hecho por manos <br> que crean con amor</h2>
-          <br>
-          <button class="btn btn-outline-dark text__deco"> <a href="./sections/contacto-encargos.html">Crea con Ariadne</a></button>
-        </div> 
-        <div data-aos="fade-left" data-aos-duration="2000" class="col-md-3 col-lg-6 col-xs-4 p-4">
-          <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:100%;" alt="Mariposa Animada">
-        </div>
-      </section>
-      <!-- FIN DEL HERO -->
-    </main>
-    <!-- FIN DEL MAIN -->
-    <section class="container-fluid section__height d-flex flex-wrap p-5">
-      <div class="row">
-        <div data-aos="fade-right" data-aos-duration="2000" class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
-          <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video introductorio de servicios
-            <code>No soporta video</code>
-          </video>
-        </div>
-        <div data-aos="fade-left" data-aos-duration="2000" class="col-sm-4 col-md-4 col-lg-6 p-5">
-          <h2 class="main__h22">Crochet Lovers</h2>
-          <br>
-          <p class="main__parragraph">
-                  Adriane es un emprendimiento que busca llevar el amor por el crochet
-                  a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
-                  elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
-                  placeat, odio dignissimos. Quaerat voluptatum odio quibusdam nobis?
-                  Illum?
-          </p>
-        </div>
+    </nav>
+  </header>
+  <main class="container-fluid">
+    <section class="row p-5 align-items-center hero">
+      <div data-aos="fade-right" data-aos-duration="2000" class="col-md-9 col-lg-6 col-xs-8 p-4">
+        <h1 class="main__h1">Ariadne <br> Crochet</h1>
+        <br>
+        <h2 class="main__h2">Crochet hecho por manos <br> que crean con amor</h2>
+        <br>
+        <button class="btn btn-outline-dark text__deco"> <a href="./sections/contacto-encargos.html">Crea con
+            Ariadne</a></button>
+      </div>
+      <div data-aos="fade-left" data-aos-duration="2000" class="col-md-3 col-lg-6 col-xs-4 p-4">
+        <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:100%;" alt="Mariposa Animada">
       </div>
     </section>
-    <!-- CONOCIENDO MÁS -->
-    <section class="container-fluid p-1 d-flex justify-content-center">
-      <div class="row">
-        <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce lo que puedes crear</h2>
-        <div data-aos="fade-up" class="col-md-4 card textos">
-          <img src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
+    <!-- FIN DEL HERO -->
+  </main>
+  <!-- FIN DEL MAIN -->
+  <section class="container-fluid section__height d-flex flex-wrap p-5">
+    <div class="row">
+      <div data-aos="fade-right" data-aos-duration="2000" class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
+        <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
+          introductorio de servicios
+          <code>No soporta video</code>
+        </video>
+      </div>
+      <div data-aos="fade-left" data-aos-duration="2000" class="col-sm-4 col-md-4 col-lg-6 p-5">
+        <h2 class="main__h22">Crochet Lovers</h2>
+        <br>
+        <p class="main__parragraph">
+          Adriane es un emprendimiento que busca llevar el amor por el crochet desde la región del Bío Bío a todo el
+          mundo. Amigurumis, patrones y video tutoriales para empezar a crear también ya que no solo puedes crear tus
+          propios diseños con tus manos, sino que puedes contactarte con nosotros para que te ayudemos a llevar tus
+          diseños de un sueño a una realidad.
+        </p>
+      </div>
+    </div>
+  </section>
+  <!-- CONOCIENDO MÁS -->
+  <section class="container-fluid p-1 d-flex">
+    <div class="row d-flex justify-content-center">
+      <div>
+        <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-2">Conoce lo que puedes crear</h2>
+        <div data-aos="fade-up" class="col-md-3 card textos">
+          <img src="./assets/customers/divu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
           <h2 class="clientes__h2">Recrea a tu ser amado</h2>
-          <p class="client__parragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
-                  quaerat aperiam fugit, omnis iure ipsa qui tempore in commodi? Blanditiis aspernatur ab cupiditate
-                  consequuntur!</p>
-        </div>
-        <div data-aos="fade-up" class="col-md-4 card textos">
-          <img src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2 class="clientes__h2">Conviértete en la heroína de tus sueños</h2>
-            <p class="client__parragraph">Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
-                    amet velit, veniam nobis hic, repellat accusantium suscipit odio debitis recusandae autem nam dolor quod
-                    incidunt.</p>
-        </div>
-        <div data-aos="fade-up" class="col-md-4 card textos">
-          <img src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
-          <h2 class="clientes__h2">Guarda un recuerdo hermoso</h2>
-          <p class="client__parragraph">Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
-                  recusandae magni odio totam optio soluta deserunt vero porro, aut facere distinctio inventore tenetur
-                  architecto? Modi.</p>
+          <p class="client__parragraph">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
+            mascota que tanto quieres y tener un recuerdo permanente de ellos.</p>
         </div>
       </div>
-    </section>
-      <!-- FIN CONOCIENDO MÁS -->
-    <footer class="container-fluid d-flex justify-content-around p-5">
-      <section class="row">
-        <div class="col-md-4">
-          <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
-          <br>
-          <a href="https://www.instagram.com/ariadnecrochet/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+      <div data-aos="fade-up" class="col-md-3 card textos align-self-center">
+        <img src="./assets/customers/lau-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
+        <h2 class="clientes__h2">Conviértete en la heroína de tus sueños</h2>
+        <p class="client__parragraph">Puedes llevar tu fantasía de ser la Sailor Scout que salvará a al mundo con un
+          hermosos amigurumi diseñado a tu semajanza y conviértete en lo que desees.</p>
+      </div>
+      <div data-aos="fade-up" class="col-md-3 card textos">
+        <img src="./assets/customers/manu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
+        <h2 class="clientes__h2">Guarda un recuerdo hermoso</h2>
+        <p class="client__parragraph">Creamos diseños personalizados para tener un regalo físico para cualquier ocasión
+          y manten fresca la memoria de tu recuerdo más preciado... De esa persona preciada.</p>
+      </div>
+    </div>
+  </section>
+  <!-- FIN CONOCIENDO MÁS -->
+  <footer class="container-fluid p-5">
+    <section class="row d-flex justify-content-between">
+      <div class="col-md-3">
+        <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
+        <br>
+        <a href="https://www.instagram.com/ariadnecrochet/"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+            height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+            <path
+              d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
           </svg> Instagram </a>
-        </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4 d-flex">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-      </section>
-    </footer>
-    <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
-
-    <!-- AOS SCRIPT -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <!-- AOS SCRIPT -->
-  </body>
-</html> 
+      </div>
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl"
+          width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </section>
+  </footer>
+  <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+  <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+  <!-- AOS SCRIPT -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <!-- AOS SCRIPT -->
+</body>
+</html>
