--- a/sections/sobreariadne.html
+++ b/sections/sobreariadne.html
@@ -4,12 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../css/main.css">
     <title>Ariadne Bootstrap</title>
   </head>
+  
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -38,9 +38,16 @@
         </div>
       </div>
     </nav>
+    <div class="container-flex">
+      <div class="row">
+        <div>
+          <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce a la creadora</h2>
+        </div>
+      </div>
+    </div>
 
-    <footer class="container-fluid d-flex justify-content-around p-5">
-      <section class="row">
+    <footer class="container-fluid p-5">
+      <section class="row d-flex justify-content-between">
         <div class="col-md-4">
           <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
           <br>
@@ -58,4 +65,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
-  </body>
+     <!-- AOS SCRIPT -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <!-- AOS SCRIPT -->
+</body>
