--- a/sections/tutoriales.html
+++ b/sections/tutoriales.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- MI CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Ariadne Tutoriales BS</title>
   </head>
@@ -40,22 +40,22 @@
       </div>
     </nav>
     <section class="container-fluid p-4">
-      <div class="row">
-        <div class="col-md-4 card textos">
+      <div class="row d-flex justify-content-evenly">
+        <div class="col-md-3 card textos">
             <section class="main__section">
                 <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
             </section>
             <h3  class="tuto__h3">Materiales para empezar</h3>
             <p class="tuto_parragraph">En el siguiente video, verás los materiales que debemos procurar para dar inicio en el mágico mundo del crochet.</p>
         </div>
-        <div class="col-md-4 card textos">
+        <div class="col-md-3 card textos">
           <section class="main__section">
             <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
         </section>
         <h3 class="tuto__h3">Arma tu primer diseño </h3>
         <p class="tuto_parragraph">Acá conocerás los primeros pasos para iniciar con el mundo del tejido.</p>
         </div>
-        <div class="col-md-4 card textos">
+        <div class="col-md-3 card textos">
           <section class="main__section">
             <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
         </section>
@@ -64,10 +64,8 @@
         </div>
       </div>
     </section>
-
-    
-    <footer class="container-fluid d-flex justify-content-around p-5">
-      <section class="row">
+    <footer class="container-fluid p-5">
+      <section class="row d-flex justify-content-between">
         <div class="col-md-4">
           <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
           <br>
@@ -93,3 +91,4 @@
     </script>
     <!-- AOS SCRIPT -->  
   </body>
+</html>
