--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <body style="overflow-x:hidden;">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container">
+        <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -66,46 +65,52 @@
   <!-- FIN DEL MAIN -->
   <section class="container-fluid section__height d-flex flex-wrap p-5">
     <div class="row">
-      <div data-aos="fade-right" data-aos-duration="2000" class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
-        <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
-          introductorio de servicios
-          <code>No soporta video</code>
-        </video>
+      <div class="d-flex">
+        <div data-aos="fade-right" data-aos-duration="2000" class="col-md-6 p-5">
+          <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
+            introductorio de servicios
+            <code>No soporta video</code>
+          </video>
+        </div>
+        <div data-aos="fade-left" data-aos-duration="2000" class="col-md-6 p-5">
+          <h2 class="main__h22">Crochet Lovers</h2>
+          <br>
+          <p class="main__parragraph">
+            Adriane es un emprendimiento que busca llevar el amor por el crochet desde la región del Bío Bío a todo el
+            mundo. Amigurumis, patrones y video tutoriales para empezar a crear también ya que no solo puedes crear tus
+            propios diseños con tus manos, sino que puedes contactarte con nosotros para que te ayudemos a llevar tus
+            diseños de un sueño a una realidad.
+          </p>
+        </div>
       </div>
-      <div data-aos="fade-left" data-aos-duration="2000" class="col-sm-4 col-md-4 col-lg-6 p-5">
-        <h2 class="main__h22">Crochet Lovers</h2>
-        <br>
-        <p class="main__parragraph">
-          Adriane es un emprendimiento que busca llevar el amor por el crochet desde la región del Bío Bío a todo el
-          mundo. Amigurumis, patrones y video tutoriales para empezar a crear también ya que no solo puedes crear tus
-          propios diseños con tus manos, sino que puedes contactarte con nosotros para que te ayudemos a llevar tus
-          diseños de un sueño a una realidad.
-        </p>
       </div>
-    </div>
   </section>
   <!-- CONOCIENDO MÁS -->
   <section class="container-fluid p-1 d-flex">
     <div class="row d-flex justify-content-center">
       <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-2">Conoce lo que puedes crear</h2>
-      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos">
-        <img src="./assets/customers/divu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
-        <h2 class="clientes__h2">Recrea a tu ser amado</h2>
-        <p class="client__parragraph">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
-            mascota que tanto quieres y tener un recuerdo permanente de ellos.</p>
-     </div>
-      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos align-self-center">
-        <img src="./assets/customers/lau-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
-        <h2 class="clientes__h2">Conviértete en la heroína de tus sueños</h2>
-        <p class="client__parragraph">Puedes llevar tu fantasía de ser la Sailor Scout que salvará a al mundo con un
-          hermosos amigurumi diseñado a tu semajanza y conviértete en lo que desees.</p>
+      
+      <div class="d-flex text-justify justify-content-evenly p-5">
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos">
+          <img src="./assets/customers/divu-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2 text-center">Recrea a tu ser amado</h2>
+          <p class="client__parragraph text-justify">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
+              mascota que tanto quieres y tener un recuerdo permanente de ellos.</p>
+       </div>
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos align-self-center">
+          <img src="./assets/customers/lau-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2 text-center">Conviértete en la heroína de tus sueños</h2>
+          <p class="client__parragraph">Puedes llevar tu fantasía de ser la Sailor Scout que salvará a al mundo con un
+            hermosos amigurumi diseñado a tu semajanza y conviértete en lo que desees.</p>
+        </div>
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos">
+          <img src="./assets/customers/manu-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2 text-center">Guarda un recuerdo hermoso</h2>
+          <p class="client__parragraph">Creamos diseños personalizados para tener un regalo físico para cualquier ocasión
+            y manten fresca la memoria de tu recuerdo más preciado... De esa persona preciada.</p>
+        </div>
       </div>
-      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos">
-        <img src="./assets/customers/manu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
-        <h2 class="clientes__h2">Guarda un recuerdo hermoso</h2>
-        <p class="client__parragraph">Creamos diseños personalizados para tener un regalo físico para cualquier ocasión
-          y manten fresca la memoria de tu recuerdo más preciado... De esa persona preciada.</p>
-      </div>
+      
     </div>
   </section>
   <!-- FIN CONOCIENDO MÁS -->
