--- a/sections/tutoriales.html
+++ b/sections/tutoriales.html
@@ -12,33 +12,35 @@
     <title>Ariadne Tutoriales BS</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./sobreariadne.html">Descubre</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Crea</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="./tienda.html">Regala</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="./contacto-encargos.html">Personaliza</a>
-            </li>
-          </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./sobreariadne.html">Descubre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Crea</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="./tienda.html">Regala</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="./contacto-encargos.html">Personaliza</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
     <section class="container-fluid p-4">
       <div class="row d-flex justify-content-evenly">
         <div class="col-md-3 card textos">
