--- a/sections/sobreariadne.html
+++ b/sections/sobreariadne.html
@@ -23,7 +23,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav align-items-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
           </li>
@@ -43,38 +43,38 @@
       </div>
     </div>
   </nav>
-  <section class="container-flex p-5">
-    <div class="row d-flex justify-content-between">
-      <div>
-        <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center p-5">Conoce a la creadora</h2>
-        <div class="col-md-6">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa exercitationem nihil explicabo dolorem ad
-            nobis magni harum quas ea soluta saepe ducimus ipsam magnam rerum dolore, distinctio quo minus veniam!</p>
+  <section class="container-flex conociendo p-5">
+    <div class="row d-flex justify-content-center">
+        <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center">Conoce a la creadora</h2>
+        <div class="col-md-6 text-center">
+          <img src="../assets/customers/divu-custom.png" style="border-radius:5%;" width="60%" alt="Conocea la Creadora">
         </div>
-        <div class="col-md-6">
-
+        <div class="col-md-6 text-center">
+          <p class="tutorial__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa exercitationem nihil explicabo dolorem ad
+            nobis magni harum quas ea soluta saepe ducimus!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas consequatur et voluptatum facilis perspiciatis eius,
+            hic libero consequuntur iusto rem, fugit veritatis dignissimos ea quaerat assumenda officia voluptate quidem
+            asperiores.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi modi neque veritatis veniam.</p>  
         </div>
-      </div>
     </div>
   </section>
-  <footer class="container-fluid p-5">
-    <section class="row d-flex justify-content-between">
-      <div class="col-md-4">
+  <footer class="bg-dark container-fluid p-2">
+    <div class="row d-flex p-3 flex-column align-items-center justify-content-center text-center">
+      <div class=" rowcol-md-6 col-xs-6 justify-content-betweens align-items-center">
         <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
-        <br>
-        <a href="https://www.instagram.com/ariadnecrochet/"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-            height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+  
+        <a class="nav-link" style="color:white" href="https://www.instagram.com/ariadnecrochet/">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
+            viewBox="0 0 16 16">
             <path
               d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
           </svg> Instagram </a>
       </div>
-      <div class="col-md-4"></div>
-      <div class="col-md-4 d-flex">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl"
-          width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-    </section>
+    </div>
+    <div class="col-md-12 text-center" style="color:white">
+      <p>Copyright (c) Div</p>
+    </div>
   </footer>
   <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -91,3 +91,4 @@
   </script>
   <!-- AOS SCRIPT -->
 </body>
+</html>
